--- a/blog_page_css/section_2.css
+++ b/blog_page_css/section_2.css
@@ -134,7 +134,7 @@
 .section-2 .blog-card {
     margin-left: auto;
     margin-right: auto;
-    max-width: 312px;
+    width: 312px;
     color: white;
     border-radius: 10px;
     overflow: hidden;
